--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -2,11 +2,12 @@
   <div class="navBg">   
     <nav class="nav">
       <div class="navLeft">
-        <a class="nav-link" href="index.html">
+        <a href="./backstage/CMS_login.html">後台</a>
+        <a class="nav-link" href="index.html">         
           <img src="./images/logo.png" alt="">
           <div class="daijoubu">
             <div class="daijoubuMd">自助大丈夫</div>
-            <div class="daijoubuEn">Easy Planning Trip</div>
+            <div class="daijoubuEn">Easy Planning Trip</div>           
           </div>
         </a>
       </div>
