--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -36,7 +36,8 @@
           <a href="member.html">會員專區</a>
         </div>
       </div>
-      <a class="nav-link, navSmallCenter" style="text-decoration: none;" data-toggle="modal" data-target="#loginForm"><img src="./images/login.png" alt=""></a>
+      <a class="navSmallCenter" href="index.html"><img src="./images/logo.png" alt=""></a>
+      <a class="nav-link, navSmallRight" style="text-decoration: none;" data-toggle="modal" data-target="#loginForm">登入</a>
     </div>
     <div class="container">
       <div class="modal fade" id="loginForm" role="dialog">
