--- a/dev/indexNav.html
+++ b/dev/indexNav.html
@@ -192,12 +192,14 @@
                 </p>
             </card>
         </a>
-        <card data-image="./images/indexNav02.png">
-            <h1 slot="header">後台</h1>
-            <p slot="content">
-                會員管理、行程管理、遊記管理
-            </p>
-        </card>
+        <a href="./backstage/CMS_login.html"> 
+            <card data-image="./images/indexNav02.png">
+                <h1 slot="header">後台</h1>
+                <p slot="content">
+                    會員管理、行程管理、遊記管理
+                </p>
+         </card>
+        </a>
     </div>
     <script>
         Vue.config.devtools = true;
