--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -2,7 +2,7 @@
   <div class="navBg">   
     <nav class="nav">
       <div class="navLeft">
-        <a class="nav-link" href="index.html">         
+        <a class="nav-link" href="index1.html">         
           <img src="./images/logo.png" alt="">
           <div class="daijoubu">
             <div class="daijoubuMd">自助大丈夫</div>
@@ -36,7 +36,7 @@
           <a href="member.html">會員專區</a>
         </div>
       </div>
-      <a class="navSmallCenter" href="index.html"><img src="./images/logo.png" alt=""></a>
+      <a class="navSmallCenter" href="index1.html"><img src="./images/logo.png" alt=""></a>
       <a class="nav-link, navSmallRight" style="text-decoration: none;" data-toggle="modal" data-target="#loginForm">登入</a>
     </div>
     <div class="container">
