--- a/dev/index.html
+++ b/dev/index.html
@@ -184,7 +184,7 @@
     <h1 class="title">自助大丈夫</h1>
 
     <div id="app" class="container">
-        <a href="./index1.html">
+        <a href="./main.html">
             <card data-image="./images/indexNav01.png">
                 <h1 slot="header">前台</h1>
                 <p slot="content">
