刪除收藏景點卡片

--- a/dev/htmlTemplate/cardSpot.html
+++ b/dev/htmlTemplate/cardSpot.html
@@ -14,7 +14,7 @@
             </div>
             <div class="cardLike">
                 <a><p>+加入行程</p></a>
-                <a class="heartimg" onclick="keepSpotLike(this);"><img src="./images/heart.png" ></a>
+                <a class="heartimg" onclick="keepLikeBtn(this);"><img src="./images/heart.png" ></a>
             </div>
         </div>
     </a>
